--- a/reconstruction.tex
+++ b/reconstruction.tex
@@ -23,7 +23,7 @@ $$
 h(x) \coloneq \langle w, \Theta(x)\rangle_V + b,\quad x\in\Omega, \eqmark[hyperplane]
 $$
 where $w$ and~$b$ are two vectors of~$V\!$.\,  The orthogonal vector~$w$ and the offset vector~$b$ are determined such that the geometric margin from the hyperplane to both $\Theta(X_1)$ and~$\Theta(X_2)$ is maximised, either in a strict way if $\Theta(X_1)$ and~$\Theta(X_2)$ are linearly separable, or in a weaker form.
- In any case, the problem of determining $w$ and~$b$ can be converted into an optimisation problem whose formulation has the peculiarity of depending on the original data~$X$ only through the scalar products between pairs of the associated transformed points~$\Theta(X)\subset V\!$.\,
+ In any case, the problem of determining $w$ and~$b$ can be converted into an optimisation problem whose formulation has the peculiarity of depending on the original data~$X$ either directly or only through the scalar products between pairs of the associated transformed points~$\Theta(X)\subset V\!$.\,
 
 Specifically, one has to find the coefficients~$\range \lambda_N/$ that maximise the quantity
 $$
