--- a/Presentazione/presentazione.tex
+++ b/Presentazione/presentazione.tex
@@ -409,7 +409,7 @@ derivante dallo sviluppo in serie di potenze di $\phi_\varepsilon$ centrato in $
 \bigskip
 \begin{itemize}
 \item
-Dal punto di vista operativo, $\widehat{\bm Q}$ si calcola come $\bar{\bm Q} = \bm Q(\bar\varepsilon)$ per un opportuno~$\bar\varepsilon$.
+Dal punto di vista operativo, $\widehat{\bm Q}$ si approssima con $\bar{\bm Q} = \bm Q(\bar\varepsilon)$ per un opportuno~$\bar\varepsilon$.
 %Possiamo classificare la regolarità di $f$ mediante i dati $(X, F)$ utilizzando una funzione $\phi$ e una soglia $\tau>0$:
 
 \bigskip\medskip
